Completed index.html

--- a/index.html
+++ b/index.html
@@ -10,13 +10,44 @@
 </head>
 <body>
     <header>
-
+        <!--TO DO-->
     </header>
     <main>
-
+        <h1>Joshua Frazer's About Me Page</h1>
+        <section>
+            <h2>Bio</h2>
+            <p>I'm an IT professional with ten years of experience. I've lived and worked in six nations accross three continents.</p>
+        </section>
+        <section>
+            <h2>Educational History</h2>
+            <ol>
+                <li>Currently Pursuing Advanced Software Development in Java with SpringMVC & Android, Code Fellows, <em>Exp. Grad. Oct 2022</em></li>
+                <li>Information Systems, Software Development Track AAS, Bellevue College, <em>Dec 2021</em></li>
+                <li>Python 3 Programming Specialization Certificate, University of Michigan via Coursera.org, <em>Sep 2020</em></li>
+                <li>Computational Thinking using Python Series Certificate, MIT via EdX.org, <em>Oct 2017</em></li>
+                <li>Associate in Arts and Sciences, Social Sciences Focus, Bellevue College, <em>Jun 2016</em></li>
+            </ol>
+        </section>
+        <section>
+            <h2>Work History</h2>
+            <ol>
+                <li>Infrastructure Operations, Port of Seattle, <em>1 Year</em></li>
+                <li>Client Sytems, United States Air Force, <em>8 Years</em></li>
+                <li>Technical Support, Sykes Enterprises, <em>1 Year</em></li>
+            </ol>
+        </section>
+        <section>
+            <h2>Goals</h2>
+            <ul>
+                <li>Get a job in Software Development</li>
+                <li>Get a job with social value.</li>
+                <li>Achieve work/life balance.</li>
+                <li>Speak three languges.</li>
+            </ul>
+        </section>
     </main>
     <footer>
-
+        <a href = "mailto: joshua.frazer.school@gmail.com">Email Joshua Frazer</a>, <a href="https://www.linkedin.com/in/joshua-frazer1/">Joshua Frazer's LinkedIn</a> June 2022
     </footer>
 </body>
 </html>
