adding requested features to index

--- a/index.html
+++ b/index.html
@@ -20,21 +20,21 @@
         </section>
         <section>
             <h2>Educational History</h2>
-            <ol>
+            <ul>
                 <li>Currently Pursuing Advanced Software Development in Java with SpringMVC & Android, Code Fellows, <em>Exp. Grad. Oct 2022</em></li>
                 <li>Information Systems, Software Development Track AAS, Bellevue College, <em>Dec 2021</em></li>
                 <li>Python 3 Programming Specialization Certificate, University of Michigan via Coursera.org, <em>Sep 2020</em></li>
                 <li>Computational Thinking using Python Series Certificate, MIT via EdX.org, <em>Oct 2017</em></li>
                 <li>Associate in Arts and Sciences, Social Sciences Focus, Bellevue College, <em>Jun 2016</em></li>
-            </ol>
+            </ul>
         </section>
         <section>
             <h2>Work History</h2>
-            <ol>
+            <ul>
                 <li>Infrastructure Operations, Port of Seattle, <em>1 Year</em></li>
                 <li>Client Sytems, United States Air Force, <em>8 Years</em></li>
                 <li>Technical Support, Sykes Enterprises, <em>1 Year</em></li>
-            </ol>
+            </ul>
         </section>
         <section>
             <h2>Goals</h2>
@@ -44,6 +44,21 @@
                 <li>Achieve work/life balance.</li>
                 <li>Speak three languges.</li>
             </ul>
+        </section>
+        <section>
+            <h2>Top Ten Favorite Fitness Activities or Exercises</h2>
+            <ol>
+                <li>Rowing (in an actual boat)</li>
+                <li>Kayaking</li>
+                <li>Hiking/Backpacking (with dog)</li>
+                <li>Squat + Deadlift</li>
+                <li>Incline Dumbbell Bench Press + Pull-down</li>
+                <li>Dumbbell Bench Press + Bench Row</li>
+                <li>Planks + Reverse Planks</li>
+                <li>Classes (e.g. Spin or Kickboxing)</li>
+                <li>Chopping Wood</li>
+                <li>Bouldering</li>                
+            </ol>
         </section>
     </main>
     <footer>
